Kubernetes/School-Information.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: school-information
  namespace: school-management
  name: school-information
spec:
  replicas: 1
  selector:
    matchLabels:
      app: school-information
  template:
    metadata:
      labels:
        app: school-information
    spec:
      containers:
        - image: tannkimsour/school-information:v0.0.1
          name: school-information
          ports:
            - containerPort: 9090
          resources:
            limits:
              cpu: 50m
              memory: 30Mi
            requests:
              cpu: 50m
              memory: 30Mi
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: school-information
  name: school-information-svc
  namespace: school-management
spec:
  ports:
    - port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: school-information
  type: ClusterIP
