Kubernetes/School-Payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: school-payment
  namespace: school-management
  name: school-payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: school-payment
  template:
    metadata:
      labels:
        app: school-payment
    spec:
      containers:
        - image: tannkimsour/school-payment:v0.0.1
          name: school-payment
          ports:
            - containerPort: 9093
          resources:
            limits:
              cpu: 50m
              memory: 30Mi
            requests:
              cpu: 50m
              memory: 30Mi
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: school-payment
  name: school-payment-svc
  namespace: school-management
spec:
  ports:
    - port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: school-payment
  type: ClusterIP
