Kubernetes/School-Management-Main.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: school-management-main
  namespace: school-management
  name: school-management-main
spec:
  replicas: 1
  selector:
    matchLabels:
      app: school-management-main
  template:
    metadata:
      labels:
        app: school-management-main
    spec:
      containers:
        - image: tannkimsour/school-management-main:v0.0.1
          name: school-management-main
          ports:
            - containerPort: 9092
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 500m
              memory: 500Mi

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: school-management-main
  name: school-management-main-svc
  namespace: school-management
spec:
  ports:
    - port: 9092
      protocol: TCP
      targetPort: 9092
  selector:
    app: school-management-main
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: school-management-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "api-server.com"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: telemetry-gw-cert
      hosts:
        - "api-server.com"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: school-management-vs
spec:
  hosts:
    - "api-server.com"
  gateways:
    - school-management-gateway
  http:
    - match:
        - uri:
            prefix: /SchoolManagemnt/v1
      route:
        - destination:
            host: school-management-main-svc.school-management-main.svc.cluster.local
            port:
              number: 9090
